--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,7 +11,7 @@
 
 #header {
   height: 10vh;
-  background: #111;
+  background: #2c80b9;
   color: #fff;
   display: flex;
   align-items: center;
