--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,19 @@
 * {
   margin: 0;
+  font-family: Arial;
 }
+
+/* --- home page ---   */
+.homePage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30vh;
+
+}
+/* --- end - home page ---   */
+
 
 #main {
   display: flex;
