remove styles of the header component and put on the main.scss

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,7 +13,22 @@
 
 }
 /* --- end - home page ---   */
+.header {
+  background-color: #2c80b9;
+  height: 68px;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+.header__item {
+  margin-right: 20px;
+  color: #FFF;
+  text-decoration: none;
+  padding: 10px;
+}
+/* --- header --- */
 
+/* --- end - header ---   */
 
 #main {
   display: flex;
