--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,18 +3,9 @@
   font-family: Arial;
 }
 
-/* --- home page ---   */
-.homePage{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 30vh;
-
-}
-/* --- end - home page ---   */
-
-/* --- header --- */
+/* ==========================================================================
+  HEADER
+========================================================================== */
 .header {
   background-color: #2c80b9;
   display: flex;
@@ -31,7 +22,35 @@
   color: #2c80b9;
   background-color: #FFF;
 }
-/* --- end - header ---   */
+
+/* ==========================================================================
+  HOME PAGE
+========================================================================== */
+.homePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30vh;
+
+}
+
+/* ==========================================================================
+  HACKTOBER PAGE
+========================================================================== */
+.pageHacktober {
+  margin-top: 5vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h2{
+    margin: 15px;
+  }
+}
+
 
 #main {
   display: flex;
