--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,6 +17,7 @@
   color: #FFF;
   text-decoration: none;
   padding: 20px;
+  text-transform: uppercase;
 }
 .header__item:hover {
   color: #2c80b9;
